# libavl

./: CMakeLists.txt  Makefile  README.md
include/: avl.h  libavl.h
lib/: Makefile
lib/libdummy/: Makefile
src/: Makefile  avl.c  balancer.c
tests/: test.c
